--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "reset": "npx knex migrate:rollback --all && npx knex migrate:latest && npx knex seed:run",
     "start": "nodemon server.js"
   },
   "keywords": [],
