--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^2.4.2",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
