--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-accordion": "^1.0.0",
