--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
-    "mapbox-gl": "^2.14.0",
     "js-cookie": "^3.0.1",
+    "mapbox-gl": "^2.14.0",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-accordion": "^1.0.0",
