--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "reset": "npx knex migrate:rollback --all && npx knex migrate:latest && npx knex seed:run",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "delete": "rm -rf ./user_files/downloads && rm -rf ./user_files/uploads"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "knex": "^2.4.2",
+    "knex-to-csv": "^1.0.1",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
   },
