--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "downloadjs": "^1.4.7",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.1",
     "mapbox-gl": "^2.14.1",
     "mdb-react-ui-kit": "^6.0.0",
